objects/advpm__AdvoDoc_Log__c.object
<CustomObject>
    <fields>
        <fullName>advpm__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AdvoDoc Log</relationshipLabel>
        <relationshipName>AdvoDoc_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__AdvoDoc_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>advpm__AdvoDoc_Template__c</referenceTo>
        <relationshipLabel>AdvoDoc Log</relationshipLabel>
        <relationshipName>AdvoDocLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>AdvoDoc Log</relationshipLabel>
        <relationshipName>AdvoDoc_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Destination__c</fullName>
        <label>Destination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Files</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Matter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matter</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>AdvoDoc Log</relationshipLabel>
        <relationshipName>AdvoDoc_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AdvoDoc Log</label>
    <listViews>
        <fullName>advpm__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ADL-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AdvoDoc Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>